--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>React Starter</title>
+        <title>d_N_D C_o_M_B_A_t</title>
     </head>
     <body>
         <div id="root"></div>
