--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>d_N_D C_o_M_B_A_t</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:400,500,700" />
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"
+            crossorigin="anonymous"
+        >
     </head>
     <body>
         <div id="root"></div>
